# codebase-improvising-agent

./: .gitignore  README.md
modernizer_agent/: __init__.py  config.py  main.py  pyproject.toml  requirements.txt
modernizer_agent/agent/: controller.py  executor.py  memory.py  planner.py  verifier.py
modernizer_agent/database/: memory.db
modernizer_agent/llm/: ollama_client.py
modernizer_agent/prompts/: system_prompt.txt
modernizer_agent/tools/: file_tools.py  git_tools.py  search_tools.py  test_tools.py
modernizer_agent/utils/: logger.py
